--- a/ToDo/WebApp/Views/ListItem/Index.cshtml
+++ b/ToDo/WebApp/Views/ListItem/Index.cshtml
@@ -55,10 +55,10 @@
                 @Html.DisplayFor(modelItem => item.DueAt)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.TaskList.Title)
+                @Html.DisplayFor(modelItem => item.TaskList!.Title)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ParentItem.Description)
+                @Html.DisplayFor(modelItem => item.ParentItem!.Description)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
