--- a/ToDo/WebApp/Views/ListItem/Details.cshtml
+++ b/ToDo/WebApp/Views/ListItem/Details.cshtml
@@ -44,13 +44,13 @@
             @Html.DisplayNameFor(model => model.TaskList)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TaskList.Title)
+            @Html.DisplayFor(model => model.TaskList!.Title)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ParentItem)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ParentItem.Description)
+            @Html.DisplayFor(model => model.ParentItem!.Description)
         </dd>
     </dl>
 </div>
